complet the nev section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Assignment-2</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navber">
+            <div>
+                <img src="styles/assets/logo.png" alt="">
+            </div>
+            <div class="inter-normal-font-1">
+                <a href=""><span class="B">Home</span></a>
+                <a href=""><span class="C">Shop</span></a>
+                <a href=""><span class="C">About us</span></a>
+                <a href=""><span class="D">🛒 Cart ($56)</span></a>
+            </div>
+        </nav>
+
+
+    </header>
 </body>
+
 </html>
