--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <nav class="navber">
+        <nav class="naver">
             <div>
                 <img src="styles/assets/logo.png" alt="">
             </div>
@@ -27,11 +27,43 @@
                 <a href=""><span class="B">Home</span></a>
                 <a href=""><span class="C">Shop</span></a>
                 <a href=""><span class="C">About us</span></a>
-                <a href=""><span class="D">🛒 Cart ($56)</span></a>
+                <a href="" class="cart-link"><svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_5_30)">
+                            <path
+                                d="M9 22.5C9.55228 22.5 10 22.0523 10 21.5C10 20.9477 9.55228 20.5 9 20.5C8.44772 20.5 8 20.9477 8 21.5C8 22.0523 8.44772 22.5 9 22.5Z"
+                                stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <path
+                                d="M20 22.5C20.5523 22.5 21 22.0523 21 21.5C21 20.9477 20.5523 20.5 20 20.5C19.4477 20.5 19 20.9477 19 21.5C19 22.0523 19.4477 22.5 20 22.5Z"
+                                stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <path
+                                d="M1 1.5H5L7.68 14.89C7.77144 15.3504 8.02191 15.764 8.38755 16.0583C8.75318 16.3526 9.2107 16.509 9.68 16.5H19.4C19.8693 16.509 20.3268 16.3526 20.6925 16.0583C21.0581 15.764 21.3086 15.3504 21.4 14.89L23 6.5H6"
+                                stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_5_30">
+                                <rect width="24" height="24" fill="white" transform="translate(0 0.5)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <span class="cart-text">Cart ($56)</span>
+                </a>
             </div>
         </nav>
 
-
+        <section class="hero">
+            <div class="hero-text">
+                <div class="noto-serif-normal-font-2">
+                    <h1 class="Font-A">ALWAYS <span class="orange">FRESH <br />FLOWERS</span></h1>
+                </div>
+                <p class="inter-normal-font-1">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                    exotic to classic blooms, we offer a wide variety of fresh flowers that are perfect for any
+                    occasion.</p>
+            </div>
+            <div class="hero-image">
+                <img src="styles/assets/hero-flower.png" alt="Fresh Flowers">
+            </div>
+        </section>
     </header>
 </body>
 
