add product section

--- a/index.html
+++ b/index.html
@@ -56,12 +56,70 @@
                 <div class="noto-serif-normal-font-2">
                     <h1 class="Font-A">ALWAYS <span class="orange">FRESH <br />FLOWERS</span></h1>
                 </div>
-                <p class="inter-normal-font-1">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                <p class="inter-normal-font-1">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. From
                     exotic to classic blooms, we offer a wide variety of fresh flowers that are perfect for any
                     occasion.</p>
             </div>
             <div class="hero-image">
                 <img src="styles/assets/hero-flower.png" alt="Fresh Flowers">
+            </div>
+        </section>
+
+        <section class="product-intro">
+            <div class="product-container">
+                <div>
+                    <h2 class="style-A , noto-serif-normal-font-2"><span class="orange">Our </span>Plants</h2>
+                    <div class="style-C">
+                        <p class="inter-normal-font-1 , style-B">Indulge your senses with the beauty and fragrance of
+                            our
+                            fresh flower shop. From exotic to classic blooms, we offer a wide variety of fresh flowers
+                            that are perfect for any occasion.</p>
+                    </div>
+                </div>
+                <div class="product-grid">
+                    <!-- 8 flower cards -->
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                    <div class="product-card"><img src="styles/assets/sample-flower-image.png">
+                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                            cart</button>
+                    </div>
+                </div>
             </div>
         </section>
     </header>
