--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 </a>
             </div>
         </nav>
+    </header>
 
+    <main>
         <section class="hero">
             <div class="hero-text">
                 <div class="noto-serif-normal-font-2">
@@ -65,7 +67,6 @@
                 <img src="styles/assets/hero-flower.png" alt="Fresh Flowers">
             </div>
         </section>
-
         <section class="product-intro">
             <div class="product-container">
                 <div>
@@ -80,49 +81,65 @@
                 <div class="product-grid">
                     <!-- 8 flower cards -->
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
-                        <p class="inter-normal-font-1 , style-E">20 USD</p><button class="btn-primary">Add to
+                        <div class="style-F">
+                            <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
+                            <p class="inter-normal-font-1 , style-E">20 USD</p>
+                        </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                 </div>
             </div>
         </section>
-    </header>
+    </main>
 </body>
 
 </html>
