--- a/index.html
+++ b/index.html
@@ -81,56 +81,56 @@
                 <div class="product-grid">
                     <!-- 8 flower cards -->
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
                             cart</button>
                     </div>
                     <div class="product-card"><img src="styles/assets/sample-flower-image.png">
-                        <div class="style-F">
+                        <div>
                             <h3 class="style-D , inter-normal-font-1">Lily Blossom</h3>
                             <p class="inter-normal-font-1 , style-E">20 USD</p>
                         </div><button class="btn-primary">Add to
