--- a/index.html
+++ b/index.html
@@ -139,6 +139,36 @@
                 </div>
             </div>
         </section>
+
+        <div class="section">
+            <div class="image-container">
+                <img class="main-image" src="styles/assets/flower-store.png" alt="Flowers">
+                <img class="badge" src="styles/assets/trusted-badge.png" alt="Trusted Seller Badge">
+            </div>
+
+            <div class="text-content">
+                <h2 class="noto-serif-normal-font-2">Flower & Plants Lover</h2>
+                <div class="inter-normal-font-1">
+                    <ul>
+                        <li>
+                            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                                roses to
+                                exotic blooms, we offer a wide variety of fresh.</p>
+                        </li>
+                        <li>
+                            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                                roses to
+                                exotic blooms, we offer a wide variety of fresh.</p>
+                        </li>
+                        <li>
+                            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                                roses to
+                                exotic blooms, we offer a wide variety of fresh.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
